// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with footer 1`] = `
<div
  className="card-wrapper"
>
  <div
    className="card card--logo-right"
    onClick={[Function]}
  >
    <div
      className="card-block"
    >
      <div
        className="card-title-block"
      >
        <div
          className="card-title-block-inner"
        >
          <div
            className="card-title-logo-container"
          >
            <div
              className="card-title-logo-helper"
            />
          </div>
          <h2
            className="card-title large"
            title="Card 1"
          >
            Card 1
          </h2>
        </div>
        <h6
          className="card-subtitle medium"
        >
          Card 1 subtitle
        </h6>
      </div>
      Card 1 description.
      <div
        className="card-footer"
      >
        <div>
          My footer
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly without footer 1`] = `
<div
  className="card-wrapper"
>
  <div
    className="card card--logo-right"
    onClick={[Function]}
  >
    <div
      className="card-block"
    >
      <div
        className="card-title-block"
      >
        <div
          className="card-title-block-inner"
        >
          <div
            className="card-title-logo-container"
          >
            <div
              className="card-title-logo-helper"
            />
          </div>
          <h2
            className="card-title large"
            title="Card 1"
          >
            Card 1
          </h2>
        </div>
        <h6
          className="card-subtitle medium"
        >
          Card 1 subtitle
        </h6>
      </div>
      Card 1 description.
    </div>
  </div>
</div>
`;
